<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="fdv.d.ui.MainActivity">

    <group
        android:id="@+id/type_group"
        android:checkableBehavior="single"
        android:enabled="true"
        android:visible="true">
        <item
            android:id="@+id/health_item"
            android:orderInCategory="300"
            android:checked="true"
            android:title="@string/health_label" />
        <item
            android:id="@+id/soft_item"
            android:orderInCategory="400"
            android:title="@string/soft_label" />
        <item
            android:id="@+id/strong_item"
            android:orderInCategory="500"
            android:title="@string/strong_label" />
    </group>
    <item
        android:id="@+id/fav_search"
        android:orderInCategory="100"
        android:icon="@drawable/ic_favorite"
        android:title="@string/fav_label"
        app:showAsAction="always" />

</menu>